# time_tracker_rs

./: Cargo.toml
src/: main.rs  time_tracker.py
