[package]
name = "time_tracker_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
regex = "1.9.5"
chrono = "0.4.31"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
csv = "1.2.2"
